--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.0",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@types/react": "~18.0.27",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.7",
+    "react-native-elements": "^3.4.3",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.20.0",
+    "react-native-vector-icons": "^9.2.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
