--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@rneui/themed": "^4.0.0-rc.7",
     "@types/react": "~18.0.27",
     "react": "18.2.0",
     "react-native": "0.71.7",
